@@ -38,6 +38,7 @@ This release includes the following bugfixes:
  o Enhanced upload speeds on Windows
  o TFTP problems after a failed transfer to the same host
  o improved out of the box TPF compatibility
+ o HTTP PUT protocol line endings portions mangled from CRLF to CRCRLF
 
 This release includes the following known bugs:
 
